bloonix-plugins-wtrm (0.4) released at 2014-XX-XX

    * Fixed UA setting in bloonix-wtrm.js.

bloonix-plugins-wtrm (0.3) released at 2014-11-26

    * Install bloonix-wtrm.js.
    * First RPM and DEB package.

bloonix-plugins-wtrm (0.2) released at 2014-11-03

    * Updated the license information.

bloonix-plugins-wtrm (0.1) released at 2014-04-18

    * Initial release.