@@ -1,6 +1,7 @@
-bloonix-plugins-wtrm (0.4) released at 2014-XX-XX
+bloonix-plugins-wtrm (0.4) released at 2014-12-03
 
     * Fixed UA setting in bloonix-wtrm.js.
+    * Fixed the check checkUrl.
 
 bloonix-plugins-wtrm (0.3) released at 2014-11-26
 
